<resources>
    <string name="app_name">Personal Finance</string>
    <string name="_0">0</string>
    <string name="create_login_page">Have no account? Sign Up</string>
    <string name="welcome_user">Welcome! User</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="select_date_of_birth">Select Date of birth</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="pin">PIN</string>
    <string name="create">Create</string>

    <string name="splash_subtitle">
        A project for CSE 335\n
        Course title: pervasive computing and mobile app development
    </string>
    <string name="have_a_account_login">Have a account? Login</string>
    <string name="welcome">Welcome</string>
    <string name="login_subtitle">Login with email and password</string>
    <string name="login">Login</string>
    <string name="first_home_page">First Home page</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="your_balance">Your Balance</string>
    <string name="_12345_99">12345.99/=</string>
    <string name="send">Send</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="add_new_note">Add new note</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="add_to_note">Add to note</string>
    <string name="image">Image</string>
    <string name="date">Date</string>
    <string name="contact">Contact</string>
    <string name="delete_user_text">Do you want to delete user?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_personal_finance">Welcome to\nPersonal Finance</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="exit">Exit</string>
    <string name="signout">Sign out</string>
    <string name="about">About</string>

</resources>