<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/background_1"
    tools:context=".FirstLoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="52sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email_ET_FLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        app:hintTextColor="@color/black"
        android:drawableTint="@color/black"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/pin_ET_FLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/pin"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        app:hintTextColor="@color/black"
        android:drawableTint="@color/black"
        android:inputType="numberPassword"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Btn_FLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/button_background_01"
        android:text="@string/login"
        android:textSize="24sp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/create_account_TV_FLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_login_page"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"/>

</LinearLayout>