<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_1"
    tools:context=".CreateAccountActivity">

    <TextView
        android:text="@string/create_new_account"
        android:paddingHorizontal="25dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic_IV_SA"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"
        android:src="@drawable/ic_image"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/name_ET_SA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="20dp"
        app:hintTextColor="@color/black"
        android:drawableTint="@color/black"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/email_ET_SA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        app:hintTextColor="@color/black"
        android:drawableTint="@color/black"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_gender"
            android:drawablePadding="20dp" />

        <Spinner
            android:id="@+id/gender_SP_SA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:id="@+id/pin_ET_SA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/pin"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        app:hintTextColor="@color/black"
        android:drawableTint="@color/black"
        android:inputType="numberPassword"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_Btn_SA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/button_background_01"
        android:text="@string/create"
        android:textSize="24sp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/login_Btn_SA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_a_account_login"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

</LinearLayout>