<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_ADL"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/black"
            android:layout_gravity="center"
            android:src="@drawable/ic_person"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:gravity="center|start">

            <TextView
                android:id="@+id/name_TV_ADL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:gravity="center|start"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email_TV_ADL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:gravity="center|start"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_btn_ADL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_contact"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/positive_button_background"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_btn_ADL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/negative_button_background"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>