<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_DDL"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"
        android:layout_gravity="center"
        android:src="@drawable/ic_person"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/name_TV_DDL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/delete_user_text"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_btn_DDL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/positive_button_background"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_btn_DDL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/negative_button_background"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>