<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionActivity">

    <TextView
        android:id="@+id/title_TA"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_gray"
        android:text="@string/deposit"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/amount_TA"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:hint="@string/enter_amount"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@drawable/text_box"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:inputType="numberDecimal"
        tools:ignore="Autofill"
        app:layout_constraintTop_toBottomOf="@id/title_TA"/>

    <EditText
        android:id="@+id/description_TA"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:hint="@string/description"
        android:textColor="@color/black"
        android:background="@drawable/text_box"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_TA"
        tools:ignore="Autofill"
        android:inputType="text" />

    <EditText
        android:id="@+id/pin_TA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:gravity="center"
        android:hint="@string/pin"
        android:textColor="@color/black"
        android:background="@drawable/text_box"
        android:textSize="16sp"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_TA"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transaction_Btn_TA"
        android:text="@string/deposit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button_background_01"
        android:elevation="20dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_TA"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>